[project]
name = "calculateremainingannualpensionallowance"
version = "1.0"
description = ""
authors = [
    {name = "John Pulford",email = "johnpulford@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "calculateremainingannualpensionallowance", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
